test/functions/vass/proc-iter/error-void-nonvoid-returns-values-1.chpl
p11e();
proc p11e() {
  if true then return; else return 1;
}
